cmake_minimum_required(VERSION 3.25)
project(CS106L)

set(CMAKE_CXX_STANDARD 20)

add_executable(CS106L
#        Assignments/Assignment1_simpleenroll/main.cpp
#        Assignments/Assignment2_marriagepact/main.cpp
#        Assignments/Assignment3_makeaclass/main.cpp
#        Assignments/Assignment3_makeaclass/class.cpp
#        Assignments/Assignment4_weatherforecast/main.cpp
        Assignments/Assignment5_treebook_starter/main.cpp
        Assignments/Assignment5_treebook_starter/user.h
        Assignments/Assignment5_treebook_starter/user.cpp
        #        LessonCodes/Lecture1.cpp
#        LessonCodes/Lecture2.cpp
#        LessonCodes/Lecture3.cpp
#        LessonCodes/Lecture5.cpp
#        LessonCodes/Lecture6.cpp
#        LessonCodes/Lecture7.cpp
#        LessonCodes/Lecture8.cpp
#        LessonCodes/Lecture10.cpp
#        LessonCodes/Lecture11.cpp
#        LessonCodes/Lecture13.cpp
#        LessonCodes/Lecture14.cpp
#        LessonCodes/Lecture15.cpp
#        LessonCodes/Lecture16.cpp
#        LessonCodes/Lecture17.cpp
)